[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/PlayerUI.gd" type="Script" id=1]
[ext_resource path="res://RobotoSlab-VariableFont_wght1.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/Textures/UI/bullet1.png" type="Texture" id=3]
[ext_resource path="res://src/Textures/UI/bullet2.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.113725, 1, 0.807843 )
border_width_top = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.368627 )
border_color = Color( 0.8, 0.8, 0.8, 0.105882 )

[sub_resource type="DynamicFont" id=3]
outline_size = 13
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 12
outline_size = 1
outline_color = Color( 0.470588, 0.466667, 1, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 0, 0, 0.807843 )
border_width_top = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 0 )

[sub_resource type="DynamicFont" id=6]
size = 12
outline_size = 1
outline_color = Color( 1, 0.411765, 0.411765, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.0862745, 0.592157, 0, 0.807843 )
border_width_top = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 0 )

[sub_resource type="DynamicFont" id=8]
size = 12
outline_size = 1
outline_color = Color( 0.521569, 0.972549, 0.482353, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 24
font_data = ExtResource( 2 )

[node name="PlayerUI" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainPanel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 45.7679
margin_top = -90.1588
margin_right = 292.768
margin_bottom = -36.1588
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MainPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 3
custom_constants/margin_top = 3
custom_constants/margin_left = 3
custom_constants/margin_bottom = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel/MarginContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 244.0
margin_bottom = 51.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShieldBar" type="ProgressBar" parent="MainPanel/MarginContainer/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.611765 )
margin_right = 241.0
margin_bottom = 13.0
rect_min_size = Vector2( 15, 0 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
value = 50.0
percent_visible = false

[node name="Label" type="Label" parent="MainPanel/MarginContainer/VBoxContainer/ShieldBar"]
anchor_bottom = 1.0
margin_left = -40.9813
margin_top = -1.33636
margin_right = -1.98132
margin_bottom = 1.66364
size_flags_vertical = 1
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 0.635294 )
text = "Shield"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HullBar" type="ProgressBar" parent="MainPanel/MarginContainer/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.611765 )
margin_top = 17.0
margin_right = 241.0
margin_bottom = 30.0
rect_min_size = Vector2( 15, 0 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
value = 50.0
percent_visible = false

[node name="Label" type="Label" parent="MainPanel/MarginContainer/VBoxContainer/HullBar"]
anchor_bottom = 1.0
margin_left = -28.9542
margin_top = -2.22729
margin_right = 10.0458
margin_bottom = 0.772705
size_flags_vertical = 1
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 0.635294 )
text = "Hull"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FuelBar" type="ProgressBar" parent="MainPanel/MarginContainer/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.611765 )
margin_top = 34.0
margin_right = 241.0
margin_bottom = 48.0
rect_min_size = Vector2( 15, 0 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
value = 50.0
percent_visible = false

[node name="Label" type="Label" parent="MainPanel/MarginContainer/VBoxContainer/FuelBar"]
anchor_bottom = 1.0
margin_left = -28.5088
margin_top = -1.33636
margin_right = 10.4912
margin_bottom = 1.66364
size_flags_vertical = 1
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 0.635294 )
text = "Fuel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryButton" type="Button" parent="."]
margin_left = 25.0
margin_top = 22.0
margin_right = 191.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 9 )
text = "Inventory"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InteractButton" type="Button" parent="."]
margin_left = 25.0
margin_top = 88.4308
margin_right = 191.0
margin_bottom = 127.431
size_flags_horizontal = 9
size_flags_vertical = 9
custom_fonts/font = SubResource( 9 )
text = "Interact"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackModeButton" type="TextureButton" parent="."]
self_modulate = Color( 1, 1, 1, 0.831373 )
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.028
margin_left = -84.3937
margin_top = 289.878
margin_right = -14.3937
margin_bottom = -256.922
rect_min_size = Vector2( 70, 70 )
rect_pivot_offset = Vector2( 35, 35 )
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="MainPanel" to="." method="_on_Panel_gui_input"]
[connection signal="button_up" from="InventoryButton" to="." method="_on_InventoryButton_button_up"]
[connection signal="button_up" from="InteractButton" to="." method="_on_InteractButton_button_up"]
[connection signal="toggled" from="AttackModeButton" to="." method="_on_AttackModeButton_toggled"]
